# KiLoader

./: .gitignore  CMakeLists.txt
include/: analyzer.h  disassembler.h  function_finder.h  nso_loader.h  progress_manager.h  pseudocode.h  string_table.h  xref_analyzer.h
include/gui/: app.h  disasm_view.h  function_view.h  pseudo_view.h  search_dialog.h  toolbar.h
src/: analyzer.cpp  disassembler.cpp  function_finder.cpp  main.cpp  nso_loader.cpp  progress_manager.cpp  pseudocode.cpp  string_table.cpp  xref_analyzer.cpp
src/gui/: app.cpp  disasm_view.cpp  function_view.cpp  pseudo_view.cpp  search_dialog.cpp  toolbar.cpp
